Instead of having multiple one-off apply/unapply methods and a User model that has non-persisted fields, User controller and views now use a UIUser case class that represents the UI's view of a user. Instances of that class are mapped onto (and back from) the User model, for persistence.

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -28,6 +28,16 @@ body {
         padding-top: @navbarHeight / 2 !important;
         padding-bottom: 0 !important;
       }
+
+      &.active {
+        a {
+          i {
+            color: red !important;
+          }
+          box-shadow: none !important;
+          background-color: white !important;
+        }
+      }
     }
   }
 
