--- a/app/views/users/BasicUserForm.scala.html
+++ b/app/views/users/BasicUserForm.scala.html
@@ -1,4 +1,4 @@
-@(theForm: Form[models.User], action: Call)(extraContent: Html)
+@(theForm: Form[UIUser], action: Call)(extraContent: Html)
 
 @import helper._
 @import helper.twitterBootstrap._
