--- a/app/views/users/makeNew.scala.html
+++ b/app/views/users/makeNew.scala.html
@@ -1,4 +1,4 @@
-@(currentUser: User, newUserForm: Form[models.User])(implicit flash: Flash)
+@(currentUser: User, newUserForm: Form[UIUser])(implicit flash: Flash)
 
 @import tags._
 
