Got rid of Admin controller. It was spurious.

--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -16,7 +16,7 @@
 
         @if(user.isAdmin) {
           <li>
-            <a href="@routes.AdminController.index()">
+            <a href="@routes.UserController.index()">
               <i class="icon-wrench"></i>Admin
             </a>
           </li>
