Got rid of remaining odd background on active navbar link

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -35,7 +35,7 @@ body {
             color: red !important;
           }
           box-shadow: none !important;
-          background-color: white !important;
+          background-color: transparent !important;
         }
       }
     }
