--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -26,6 +26,7 @@
 
     @scriptAsset("javascripts/jquery-1.7.1.min.js")
     @scriptAsset("javascripts/util.min.js")
+    @scriptAsset("javascripts/main.min.js")
 
     <!--
         Twitter Bootstrap integration. Adapted from
@@ -56,23 +57,7 @@
       @navbar(currentUser)
 
       <div id="content">
-        <div id="flash">
-          @Seq("info", "error").map {t =>
-            @flash.data.get(t).map { message =>
-              <div class="alert alert-@t">
-                <a class="close" data-dismiss="alert">x</a>
-                @message
-              </div>
-            }.getOrElse("")
-          }
-        </div>
-        @* Used by window.flash() in util.coffee *@
-        <div id="flash-template" style="display:none">
-          <div class="alert">
-            <a class="close" data-dismiss="alert">x</a>
-            <span class="flash-message"></span>
-          </div>
-        </div>
+        @flashBlock(flash)
 
         <div class="row-fluid">
           @content
